metatags, google analytics...

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 GENERATE_SOURCEMAP=false
 REACT_APP_VERSION=1.0.1
+REACT_APP_GOOGLE_ANALITICS_ID=G-RK60HMQLBJ
+REACT_APP_WALLET_CONNECT_PROJECT_ID=70ebb6579ac9179a26c05522d3d5ba15
