--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^17.0.2",
+    "react-ga4": "^2.1.0",
     "react-hook-form": "^7.43.1",
     "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.5",
